# rust-ecr17-protocol

./: .gitattributes  .gitignore  .imgbotconfig  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROGRESS.md  README.md
.claude/rules/: rule-money-safety.md  rule-progress-lesson-sync.md  rule-readme-sync.md
.claude/skills/ecr17-workflow/: SKILL.md
.github/workflows/: e2e.yml  frontend-checks.yml  readme-check.yml  release.yml  rust-tests.yml  tauri-check.yml
app/: biome.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
app/e2e/: panel.spec.ts  smoke.spec.ts  tauri-mock.ts
app/scripts/: capture-assets.mjs
app/src/: App.css  App.test.tsx  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: BusyOverlay.tsx  CommandPalette.tsx  CommandParamsSheet.test.tsx  CommandParamsSheet.tsx  ConfigForm.tsx  ConnectionBar.tsx  LogConsole.tsx
app/src/ecr17/: commands.ts  logger.ts  results.test.ts  results.ts  storage.ts  tauri.ts  types.ts  useEcr17.ts
app/src/test/: setup.ts
crates/ecr17-protocol/: Cargo.toml  README.md
crates/ecr17-protocol/src/: client.rs  codec.rs  error.rs  lib.rs  lrc.rs  protocol.rs  response.rs  retry.rs  session.rs  transport.rs  types.rs
crates/ecr17-protocol/src/transport/: tcp.rs
docs/: LESSON.md  PLAN.md
scripts/: sync-readme.mjs
