[workspace]
resolver = "2"
members = ["crates/ecr17-protocol"]
# The Tauri app is a self-contained cargo project (its own lockfile). Excluded so the
# lean protocol workspace `cargo test` never has to compile the Tauri/WebView stack —
# the desktop/installer build runs in CI. The app will take a path dependency on
# `ecr17-protocol` when the backend bridge is wired (MACRO 6); not declared yet.
exclude = ["app"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/padosoft/rust-ecr17-protocol"
authors = ["Padosoft <support@padosoft.com>"]
# 1.85: std::task::Waker::noop() (used by the tokio TCP transport's liveness probe).
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false }
async-trait = "0.1.89"

[profile.release]
lto = true
strip = true
