[package]
name = "app"
version = "1.0.1"
description = "ECR17 Control Panel — Tauri backend bridging the ecr17-protocol client"
authors = ["Padosoft <support@padosoft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ecr17-protocol = { path = "../../crates/ecr17-protocol", features = ["tokio-transport"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

