[package]
name = "ecr17-protocol"
version = "0.1.0"
description = "Italian ECR17 payment protocol (Nexi Group POS terminals) over LAN — pure-Rust protocol engine plus an async client and an optional tokio TCP transport."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["ecr17", "nexi", "pos", "payment", "protocol"]
categories = ["network-programming", "api-bindings", "encoding"]

[features]
default = []
# Real tokio TCP transport (adds tokio's net/io stack). The async session, the Transport
# trait and the in-memory FakeTransport are always available; only the real socket needs
# this feature.
tokio-transport = ["tokio/net", "tokio/io-util", "tokio/rt-multi-thread"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
# The async session/client always need timers, sync primitives and a runtime handle.
tokio = { workspace = true, features = ["time", "sync", "rt", "macros"] }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync", "test-util"] }

[package.metadata.docs.rs]
all-features = true
